# pourewa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
OrthancManager/: OrthancManager.conf  OrthancManager.py  OrthancRestToolbox.py  helpers.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
docs/source/_static/: custom.css
pourewa/: pdf2dicom.py  pourewa.py
